# agarcisr-TFG

./: .gitignore  README.md  app.py  docker-compose.yaml  protocols.py  requirements.txt  streamlit_app.py
.devcontainer/: devcontainer.json
routes/: app.py  f_server_1.py  f_server_2.py  protocols.py
service/server1/: Dockerfile  f_server_1.py  requirements.txt
service/server2/: Dockerfile  f_server_2.py  requirements.txt
shadow_crypt/: Cargo.toml  README.md  pyproject.toml  test_shadow_crypt.py
shadow_crypt/src/: dh.rs  ecdh.rs  kyber.rs  lib.rs  ntru.rs  rsa.rs
tabs/: ask_ai.py  compare_protocols.py  overview.py  questions.py  test_protocols.py
test/: test_app.py
utils/: carousel.py  database.py  plotting.py  protocol_testing.py  style_loader.py
visuals/: styles.css
